dataset1235/2025-2/2318198438/users/1324664027/executions/2601575092_3940197836.log
== RUN (2025-08-12 00:56:12)
-- CODE: 
aresta = 5
area = 
 
print(round((3*3**0,5)/2)*5**2, 4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
File "XXXX", line 2
    area = 
           ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
File "XXXX", line 2
    area = 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:56:32)
-- CODE: 
aresta = 5
area = 
 
print(round((3*3**0,5)/2)*5**2,4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
File "XXXX", line 2
    area = 
           ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
File "XXXX", line 2
    area = 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 01:03:37)
-- CODE: 
A = 5
a = ((3*(3**0.5))/2)*(A**2)
print(round(a, 4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
---- user output:
64.9519
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:59:24)
-- CODE: 
print(round((3*3**0,5)/2)*5**2,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
File "XXXX", line 1
    print(round((3*3**0,5)/2)*5**2,4))
                                     ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
File "XXXX", line 1
    print(round((3*3**0,5)/2)*5**2,4))
                                     ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:59:48)
-- CODE: 
print(round((3*3**0,5)/2)*5**2,4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round((3*3**0,5)/2)*5**2,4)
                ~~~~~~~~~~^~
TypeError: unsupported operand type(s) for /: 'tuple' and 'int'
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round((3*3**0,5)/2)*5**2,4)
                ~~~~~~~~~~^~
TypeError: unsupported operand type(s) for /: 'tuple' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:54:38)
-- CODE: 
aresta =
area = 
 
print(round((3*3**0,5)/2)*5**2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
File "XXXX", line 1
    aresta =
            ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
File "XXXX", line 1
    aresta =
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:56:33)
-- CODE: 
aresta = 5
area = 
 
print(round((3*3**0,5)/2)*5**2,4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
File "XXXX", line 2
    area = 
           ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
File "XXXX", line 2
    area = 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:57:38)
-- CODE: 
aresta = 5
area = "A"

print(round((3*3**0,5)/2)*5**2,4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round((3*3**0,5)/2)*5**2,4)
                ~~~~~~~~~~^~
TypeError: unsupported operand type(s) for /: 'tuple' and 'int'
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round((3*3**0,5)/2)*5**2,4)
                ~~~~~~~~~~^~
TypeError: unsupported operand type(s) for /: 'tuple' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:49:12)
-- CODE: 
aresta =
area = (3*3**1/2)/2
 
print(round(area, (3*3**1/2)/2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
File "XXXX", line 1
    aresta =
            ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
File "XXXX", line 1
    aresta =
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:49:00)
-- CODE: 
aresta =
area = (3*3**1/2)/2
 
print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
File "XXXX", line 1
    aresta =
            ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
File "XXXX", line 1
    aresta =
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:54:46)
-- CODE: 
aresta = 5
area = 
 
print(round((3*3**0,5)/2)*5**2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
File "XXXX", line 2
    area = 
           ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
File "XXXX", line 2
    area = 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:58:25)
-- CODE: 
print(round((3*3**0,5)/2)*5**2,4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round((3*3**0,5)/2)*5**2,4)
                ~~~~~~~~~~^~
TypeError: unsupported operand type(s) for /: 'tuple' and 'int'
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round((3*3**0,5)/2)*5**2,4)
                ~~~~~~~~~~^~
TypeError: unsupported operand type(s) for /: 'tuple' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:54:31)
-- CODE: 
aresta = 
area = 
 
print(round((3*3**0,5)/2)*5**2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
File "XXXX", line 1
    aresta = 
             ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
File "XXXX", line 1
    aresta = 
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:54:32)
-- CODE: 
aresta = 
area = 
 
print(round((3*3**0,5)/2)*5**2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
File "XXXX", line 1
    aresta = 
             ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
File "XXXX", line 1
    aresta = 
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:52:24)
-- CODE: 
aresta = 5
area = (3*3**1/2)/2
 
print(round((3*3**0,5)/2)*5**2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round((3*3**0,5)/2)*5**2)
                ~~~~~~~~~~^~
TypeError: unsupported operand type(s) for /: 'tuple' and 'int'
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round((3*3**0,5)/2)*5**2)
                ~~~~~~~~~~^~
TypeError: unsupported operand type(s) for /: 'tuple' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:57:30)
-- CODE: 
aresta = 5
area = A
 
print(round((3*3**0,5)/2)*5**2,4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = A
           ^
NameError: name 'A' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = A
           ^
NameError: name 'A' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:50:25)
-- CODE: 
aresta = A
area = (3*3**1/2)/2
 
print(round(area, (3*3**0,5)/2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    aresta = A
             ^
NameError: name 'A' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    aresta = A
             ^
NameError: name 'A' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:51:03)
-- CODE: 
aresta = A
area = (3*3**1/2)/2
 
print(round((3*3**0,5)/2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    aresta = A
             ^
NameError: name 'A' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    aresta = A
             ^
NameError: name 'A' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:51:56)
-- CODE: 
aresta = 5
area = (3*3**1/2)/2
 
print(round((3*3**0,5)/2)*5**2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round((3*3**0,5)/2)*5**2)
                ~~~~~~~~~~^~
TypeError: unsupported operand type(s) for /: 'tuple' and 'int'
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round((3*3**0,5)/2)*5**2)
                ~~~~~~~~~~^~
TypeError: unsupported operand type(s) for /: 'tuple' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:56:10)
-- CODE: 
aresta = 5
area = 
 
print(round((3*3**0,5)/2)*5**2, 4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
File "XXXX", line 2
    area = 
           ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
File "XXXX", line 2
    area = 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:54:55)
-- CODE: 
aresta = 5
area = 
 
print(round((3*3**0,5)/2)*5**2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
File "XXXX", line 2
    area = 
           ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
File "XXXX", line 2
    area = 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:56:10)
-- CODE: 
aresta = 5
area = 
 
print(round((3*3**0,5)/2)*5**2, 4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
File "XXXX", line 2
    area = 
           ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
File "XXXX", line 2
    area = 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:51:14)
-- CODE: 
aresta = a
area = (3*3**1/2)/2
 
print(round((3*3**0,5)/2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    aresta = a
             ^
NameError: name 'a' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    aresta = a
             ^
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 01:00:32)
-- CODE: 
print(round((3*3**0,5)/2)*5**2), 4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
File "XXXX", line 1
    print(round((3*3**0,5)/2)*5**2), 4)
                                      ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
File "XXXX", line 1
    print(round((3*3**0,5)/2)*5**2), 4)
                                      ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 01:00:41)
-- CODE: 
print(round((3*3**0,5)/2)*(5**2), 4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round((3*3**0,5)/2)*(5**2), 4)
                ~~~~~~~~~~^~
TypeError: unsupported operand type(s) for /: 'tuple' and 'int'
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round((3*3**0,5)/2)*(5**2), 4)
                ~~~~~~~~~~^~
TypeError: unsupported operand type(s) for /: 'tuple' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:56:33)
-- CODE: 
aresta = 5
area = 
 
print(round((3*3**0,5)/2)*5**2,4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
File "XXXX", line 2
    area = 
           ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
File "XXXX", line 2
    area = 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 01:01:05)
-- CODE: 
print(round(((3*(3**0,5)))/2)*(5**2), 4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(((3*(3**0,5)))/2)*(5**2), 4)
                ~~~~~~~~~~~~~~^~
TypeError: unsupported operand type(s) for /: 'tuple' and 'int'
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(((3*(3**0,5)))/2)*(5**2), 4)
                ~~~~~~~~~~~~~~^~
TypeError: unsupported operand type(s) for /: 'tuple' and 'int'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:58:24)
-- CODE: 
print(round((3*3**0,5)/2)*5**2,4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round((3*3**0,5)/2)*5**2,4)
                ~~~~~~~~~~^~
TypeError: unsupported operand type(s) for /: 'tuple' and 'int'
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round((3*3**0,5)/2)*5**2,4)
                ~~~~~~~~~~^~
TypeError: unsupported operand type(s) for /: 'tuple' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:56:09)
-- CODE: 
aresta = 5
area = 
 
print(round((3*3**0,5)/2)*5**2, 4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
File "XXXX", line 2
    area = 
           ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
File "XXXX", line 2
    area = 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:58:15)
-- CODE: 
print(round((3*3**0,5)/2)*5**2,4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round((3*3**0,5)/2)*5**2,4)
                ~~~~~~~~~~^~
TypeError: unsupported operand type(s) for /: 'tuple' and 'int'
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round((3*3**0,5)/2)*5**2,4)
                ~~~~~~~~~~^~
TypeError: unsupported operand type(s) for /: 'tuple' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
